Fix initial spinner visibility

--- a/css/includes/pages/_search.scss
+++ b/css/includes/pages/_search.scss
@@ -224,7 +224,6 @@ table.search-results {
       height: 100%;
       background: #80808033;
       z-index: 20;
-      visibility: hidden;
 
       div.spinner-border {
          width: 50px;
